--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.1.0",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "next": "15.1.0",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
