--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.1.0",
     "@tailwindcss/forms": "^0.5.9",
     "@types/bcrypt": "^5.0.2",
@@ -19,6 +20,7 @@
     "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "validator": "^13.12.0",
     "zod": "^3.24.1"
   },
