--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.1.0",
+    "@supabase/supabase-js": "^2.47.10",
     "@tailwindcss/forms": "^0.5.9",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
